--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 </head>
 <body>
     <section class="top">
-        <div class="top__logo">
-            <a class="logo" href="index.html"><img class="logo__img" src="img/logo.png" alt="Лого"></a>
-            <p>PT</p>
-        </div>
+
+                <div class="top__logo">
+                    <a class="logo" href="index.html"><img class="logo__img" src="img/logo.png" alt="Лого"></a>
+                    <p>PT</p>
+                </div>
+
         <div class="top__content">
             <h1 class="top__title">Serviços de tradução e revisão</h1>
             <button class="top__button">VAMOS TRADUZIR?</button>
@@ -27,28 +29,30 @@
     </section>
     <div class="tutech">
     </div>
-    <section class="info center">
-        <div class="info__content">
-            <h2 class="info__title">NEMESIO</h2>
-            <div class=""></div>
-            <p>
-                A Nemésio é uma empresa de serviços de tradução, focada em entregar resulta-dos de qualidade.
-             </p>
-            <p>
-                Trabalhamos para entregar aos nossos clientes as mais fiéis traduções de docu-mentos que terão influência nas suas vidas, pessoais ou profissionais.
-            </p>
-            <p>
-                Para isso, contamos com quase 15 anos de experiência, uma formação académi-ca rica e diversificada, e um domínio das melhores ferramentas desta área de
-                atuação.
-            </p>
+
+    <section class="info">
+                <div class="info__content">
+                    <h2 class="info__title">NEMESIO</h2>
+                    <div class=""></div>
+                    <p>
+                        A Nemésio é uma empresa de serviços de tradução, focada em entregar resulta-dos de qualidade.
+                     </p>
+                    <p>
+                        Trabalhamos para entregar aos nossos clientes as mais fiéis traduções de docu-mentos que terão influência nas suas vidas, pessoais ou profissionais.
+                    </p>
+                    <p>
+                        Para isso, contamos com quase 15 anos de experiência, uma formação académi-ca rica e diversificada, e um domínio das melhores ferramentas desta área de
+                        atuação.
+                    </p>
+                </div>
+                <div class="info__img">
+                    <img src="img/nemesio-001.jpg" alt="founder">
+                    <div class="info__img__name">
+                        <h2>INÊS NEMESIO</h2>
+                        <p>Founder</p>
+                    </div>
         </div>
-        <div class="info__img">
-            <img src="img/nemesio-001.jpg" alt="founder">
-            <div class="info__img__name">
-                <h2>INÊS NEMESIO</h2>
-                <p>Founder</p>
-            </div>
-        </div>
+
     </section>
     <section class="services">
         <h1 class="services__title">Os nossos serviços</h1>
