--- a/index.html
+++ b/index.html
@@ -160,24 +160,26 @@
             </div>
             <form class="contact-form" id="contactForm_1" method="POST">
                 <div class="row">
-                    <div class="col-6">
-                        <div class="contacts__data ">
-                            <input type="text" class="form-control contact-form__input contact-form__input_name" placeholder="Nome"
-                                    name="name" minlength="2" maxlength="30" required="required">
-                            <input type="email" name="email" class="form-control contact-form__input contact-form__input_email" 
-                                    placeholder="email" required="required">
-                            <input type="tel" name="tel" class="form-control contact-form__input contact-form__input_tel tel" 
-                                    placeholder="Telefone" required="required">
+                    <div class="contacts__content">
+                        <div class="col-6">
+                            <div class="contacts__data ">
+                                <input type="text" class="form-control contact-form__input contact-form__input_name" placeholder="Nome"
+                                        name="name" minlength="2" maxlength="30" required="required">
+                                <input type="email" name="email" class="form-control contact-form__input contact-form__input_email" 
+                                        placeholder="email" required="required">
+                                <input type="tel" name="tel" class="form-control contact-form__input contact-form__input_tel tel" 
+                                        placeholder="Telefone" required="required">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6">
-                        <textarea class="form-control contact-form__input contact-form__text" name="text" rows="6" placeholder="Mensagem" id="check"></textarea>
-                        <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Autorizo a utilização dos meus dados para efeitos do que está
-                                previsto no Regulamento Geral de Protecção de Dados (RGPD)
-                            </label>
-                          </div>
+                        <div class="col-6">
+                            <textarea class="form-control contact-form__input contact-form__text" name="text" rows="6" placeholder="Mensagem" id="check"></textarea>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Autorizo a utilização dos meus dados para efeitos do que está
+                                    previsto no Regulamento Geral de Protecção de Dados (RGPD)
+                                </label>
+                              </div>
+                        </div>
                     </div>
                     <div class="col-12">
                         <button type="submit" class="contacts__button contact-form__button">ENTRE EM CONTACTO</button>
